[package]
name = "rs-drive-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
base64 = "0.13.0"
rand = "0.8.4"
hex = "0.4.3"
rand_distr = "0.4.3"
tempdir = "0.3.7"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
sqlparser = "0.13.0"
indexmap = "1.8.0"
rocksdb = { git = "https://github.com/yiyuanliu/rust-rocksdb", branch = "transaction" }

[dependencies.rs-drive]
git = "https://github.com/dashevo/rs-drive"
branch = "develop"
#branch = "feat/sqlQuerying"

[dependencies.grovedb]
git = "https://github.com/dashevo/grovedb"
branch = "master"
#branch = "feat/subtree-refcell"