[package]
name = "rs-drive-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
base64 = "0.13.0"
rand = "0.8.4"
hex = "0.4.3"
rand_distr = "0.4.3"
tempdir = "0.3.7"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
sqlparser = "0.13.0"
indexmap = "1.8.0"
rustyline = "9.1.2"
bincode = "1.3.3"
ciborium = "0.2.0"
itertools = "0.10.3"
prettytable-rs = "0.8.0"
chrono = "0.4.19"
num-integer = "0.1.45"

[dependencies.rs-drive]
git = "https://github.com/dashevo/rs-drive"
branch = "feat/feesv4"

[dependencies.grovedb]
git = "https://github.com/dashevo/grovedb"
branch = "develop"